--- a/build.yaml
+++ b/build.yaml
@@ -23,3 +23,6 @@ include:
     shield: ahhboard_left
   - board: nice_nano_v2
     shield: ahhboard_right
+  - board: nice_nano_v2
+    shield: settings_reset
+    
