--- a/config/boards/shields/ahhboard/ahhboard.dtsi
+++ b/config/boards/shields/ahhboard/ahhboard.dtsi
@@ -26,4 +26,14 @@ RC(3,0) RC(3,1) RC(3,2) RC(3,3) RC(3,4) RC(3,5) RC(3,6)                 RC(3,7) 
         >;
     };
 
+    kscan0: kscan {
+        compatible = "zmk,kscan-gpio-matrix";
+        wakeup-source;
+        diode-direction = "col2row";
+    };
+    kscan1: kscan {
+        compatible = "zmk,kscan-gpio-matrix";
+        wakeup-source;
+        diode-direction = "col2row";
+    };
 };
