--- a/config/boards/shields/ahhboard/ahhboard.dtsi
+++ b/config/boards/shields/ahhboard/ahhboard.dtsi
@@ -4,6 +4,14 @@
     chosen {
         zmk,kscan = &kscan0;
         zmk,matrix_transform = &default_transform;
+        zmk,physical-layout = &physical_layout0
+    };
+    
+    physical_layout0: physical_layout_0 { 
+        compatible = "zmk,physical-layout";
+        display-name = "ahhboard-layout";
+        kscan = <&kscan0>;
+        transform = <&default_transform>; 
     };
 
     default_transform: keymap_transform_0 {
@@ -30,5 +38,5 @@ RC(3,0) RC(3,1) RC(3,2) RC(3,3) RC(3,4) RC(3,5) RC(3,6)                 RC(3,7) 
         compatible = "zmk,kscan-gpio-matrix";
         wakeup-source;
         diode-direction = "col2row";
-    };
+    };  
 };
